<resources>
    <string name="app_name">Weituo</string>
    <string name="title_one">One</string>
    <string name="title_two">Two</string>
    <string name="title_three">Three</string>
    <string name="title_four">Four</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_confirm">confirm</string>
    <string name="prompt_nickname">NickName</string>
    <string name="prompt_age">Age</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_unlike_password">This password is unlike</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_setting">SettingActivity</string>
    <!--设置-->
    <string name="setting_accountInfo">编辑资料</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
</resources>
